[tool.poetry]
name = "autoscale-agent"
version = "0.1.0"
description = ""
authors = ["Michael R. van Rooijen <michael@autoscale.app>"]
readme = "README.md"
packages = [{include = "autoscale_agent"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
freezegun = "^1.2.2"
httpretty = "^1.1.4"
pytest-mock = "^3.10.0"
black = "^23.3.0"
paver = "^1.3.4"
coverage = "^7.2.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
